--- a/TopMenusReport/cproReport.html
+++ b/TopMenusReport/cproReport.html
@@ -1158,7 +1158,7 @@
             var startLength = editTime.split('至')[0].split(';').length;
             var editStartDate = startLength == 3 ? editTime.split(';')[2].split(' ')[0] : editTime.split('至')[0].split(' ')[0];
             var editEndDate = editTime.split('至')[1].split(' ')[1];
-            var params = {
+            params = {
                 startDate: editStartDate,
                 endDate: editEndDate
             }
